--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL=http://localhost:8081
-# REACT_APP_API_URL=http://localhost:8081
+# REACT_APP_API_URL=http://spring-backend:8081
 
